maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:2: error: illegal start of definition
package maze.pledge;
^